[workspace]
resolver = "2"
members = [
    "uvcertificate",
    "uvserver",
    "uvclient",
    "uvclient-socks5",
]

[workspace.dependencies]
log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
rustls-pemfile = "1.0.2"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
