[package]
name = "tun2layer4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

layer3to4 = {path = "../layer3to4"}
log = "0.4"


[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
tun = "0.5"
