[package]
name = "uvclient-socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
rustls-pemfile = "1.0.2"

channel-mux-with-stream = { git = "https://github.com/pysrc/channel-mux-with-stream.git", branch = "0.1.10" }
# channel-mux-with-stream = { path = "../../channel-mux-with-stream" }
