[package]
name = "uvclient-socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
simple_logger = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

async_smux = "0.3"
