[package]
name = "uvclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"


[dependencies]

log = { workspace = true }
simple_logger = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }


tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

tun2layer4 = {path = "../libs/tun2layer4"}

async_smux = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
