[package]
name = "uvserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
rustls-pemfile = "1.0.2"
# async_smux = "0.3"
yamux = "0.13.1"
tokio-util = { version = "0.7", features=["compat"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
